Fixed image bottom spacing

--- a/css/style.css
+++ b/css/style.css
@@ -24,9 +24,10 @@
 
 .item-card img {
     width: 100%;
+    display: block;
 }
 
-.hidden-img {
+.item-card .hidden-img {
     display: none;
 }
 
